--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           technologies, and cloud platforms. I'm a strong believer in
           continuous learning, collaboration, and clean, maintainable code.
         </p>
-        <a href="#" class="btn">Download Resume</a>
+        <a href="#" class="btn" id="downloadResumeBtn">Download Resume</a>
       </div>
     </div>
   </section>
